--- a/src/pages/assets/main.css
+++ b/src/pages/assets/main.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css?family=Montserrat:400|Inconsolata:400"); */
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap'); */
 *,
 ::after,
 ::before {
@@ -55,7 +55,7 @@
   /* typography */
   --defaultFontSize: 87.5%;
   --headingFont: "Inconsolata", monospace;
-  --bodyFont: "Montserrat", sans-serif;
+  --bodyFont: "Inter", sans-serif;
   --smallText: 0.8em;
   --extraSmallText: 0.7em;
   /* rest */
@@ -208,7 +208,7 @@ button,
   border: none;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
-  padding: 0.375rem 0.75rem;
+  padding: 0.7rem 0.75rem;
   box-shadow: var(--shadow-1);
   transition: var(--transition);
   text-transform: capitalize;
@@ -385,7 +385,7 @@ form > *:last-child {
 .nav-link {
   display: block;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2em;
   text-transform: capitalize;
   color: white;
   letter-spacing: var(--letterSpacing);
@@ -400,10 +400,18 @@ form > *:last-child {
 .contact-link {
   display: flex;
   justify-content: center;
-  color: white;
+  width: 9rem;
+  margin: 0 auto;
 }
 .contact-link a {
   padding: 0.15rem 1rem;
+}
+.arrow-span {
+  opacity: 1;
+  font-size: 1em;
+  position: relative;
+  bottom: 0.05rem;
+  margin-left: 0.3em;
 }
 
 @media screen and (min-width: 992px) {
@@ -434,8 +442,7 @@ form > *:last-child {
   .nav-link {
     padding: 0;
     border-top: none;
-    margin-right: 1rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
     white-space: nowrap;
     padding: 0.15rem 1rem;
   }
@@ -445,6 +452,11 @@ form > *:last-child {
     justify-content: flex-end;
     align-items: center;
     margin-right: 0;
+  }
+  .contact-link {
+    display: flex;
+    justify-content: center;
+    margin: 0;
   }
 }
 
