--- a/src/pages/assets/main.css
+++ b/src/pages/assets/main.css
@@ -208,10 +208,12 @@ button,
   border: none;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
-  padding: 0.7rem 0.75rem;
+  padding: 0.4rem 0.75rem;
   box-shadow: var(--shadow-1);
   transition: var(--transition);
   text-transform: capitalize;
+  font-size: 1rem;
+  font-weight: 700;
 }
 button:hover,
 .btn:hover {
@@ -361,7 +363,7 @@ form > *:last-child {
   align-items: center;
 }
 .nav-header img {
-  width: 200px;
+  width: 123.76px;
   margin-left: -6px;
   margin-bottom: -9px;
 }
@@ -369,7 +371,7 @@ form > *:last-child {
   padding: 0.15rem 0.75rem;
 }
 .nav-btn svg {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 .nav-links {
   height: 0;
@@ -400,8 +402,9 @@ form > *:last-child {
 .contact-link {
   display: flex;
   justify-content: center;
-  width: 9rem;
+  width: 10rem;
   margin: 0 auto;
+  padding: 0.5rem;
 }
 .contact-link a {
   padding: 0.15rem 1rem;
@@ -411,7 +414,7 @@ form > *:last-child {
   font-size: 1em;
   position: relative;
   bottom: 0.05rem;
-  margin-left: 0.3em;
+  margin-left: 0.4em;
 }
 
 @media screen and (min-width: 992px) {
@@ -442,7 +445,8 @@ form > *:last-child {
   .nav-link {
     padding: 0;
     border-top: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    font-weight: 700;
     white-space: nowrap;
     padding: 0.15rem 1rem;
   }
