feat: test hero and test images

--- a/src/pages/assets/main.css
+++ b/src/pages/assets/main.css
@@ -215,6 +215,10 @@ button,
   font-size: 1rem;
   font-weight: 700;
 }
+.grey {
+  background: grey;
+  margin-left: 1.3125rem;
+}
 button:hover,
 .btn:hover {
   color: var(--white);
