--- a/src/pages/assets/main.css
+++ b/src/pages/assets/main.css
@@ -39,6 +39,12 @@ html {
     --defaultFontSize: 100%;
   }
 }
+@media only screen and (max-width: 576px) {
+  .spotlight-image {
+    width: 50% !important;
+    margin-left: 50px;
+  }
+}
 @media only screen and (min-width: 768px) {
   :root {
     --defaultFontSize: 112.5%;
